Fixed buttons and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,14 @@ footer a:hover {
 .btn {
   background: #00204a;
   color: #fcfefe;
+  border-radius: 4px;
+  display: inline-block;
+  font-size: 1.2rem;
+  letter-spacing: 0.1em;
+  line-height: 1;
+  padding: 7px;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 .content-wrapper {
@@ -121,6 +129,7 @@ footer a:hover {
 
 .download-link {
   position: fixed;
+  font-size: 1.5rem;
   left: 5px;
   top: 5px;
 }
@@ -147,10 +156,26 @@ footer a:hover {
   column-gap: 20px;
   display: grid;
   grid-template-columns: 300px 1fr;
+  margin: 30px 0;
+}
+
+.work-details p {
+  margin: 0;
+}
+
+.work-summary p:first-child {
+  margin-top: 0;
 }
 
 /*Education
 -----------------------*/
+.education-item {
+  margin: 30px 0;
+}
+
+.education-item p {
+  margin: 0;
+}
 
 /*FOOTER
 -----------------------*/
